--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <section id="main">
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
+		<p>My Profile Picture</p>
 		<img id="preview">
         <canvas width="540" height="540" id="canvas"></canvas>
     </section>
