modified for hackathon

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 <body>
     <section id="main">
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
-		<p>My Profile Picture</p>
-		<img id="preview">
+		<p>My Picture</p>
+		<input id='camera' type="file" accept="image/*capture=camera" name="capture pic from camera">
+		<img id="preview" >
         <canvas width="540" height="540" id="canvas"></canvas>
     </section>
     <div class="inputtext" style="width:600px; margin:0 auto;">
