--- a/index.html
+++ b/index.html
@@ -24,14 +24,8 @@
 		<img id="preview" >
         <canvas width="540" height="540" id="canvas"></canvas>
     </section>
-    <div class="inputtext" style="width:600px; margin:0 auto;">
-        <label for="inputed">輸入客製化文字：
-            <textarea name="inputed" maxlength="6" id="inputed" placeholder="限輸6字"></textarea><!-- 提供使用者輸入文字欄-->
-        </label>
-        <br>
-        <button id="sentimg" onClick="PostImageToFacebook()">Post to Facebook</button><!-- 傳送按鈕-->
-    </div>
-    <div class="info"></div><!-- 訊息欄位-->
+	<input type='button' id="gen"><!-- 傳送按鈕-->
+    <div class="info"><a id="download"></a></div><!-- 訊息欄位-->
 
     
 
